--- a/about.html
+++ b/about.html
@@ -238,7 +238,7 @@
        <!--Start of third container for Meet the team-->
            <div class="column-about-page-meet-the-team">
              <div class="card">
-               <img src="images/pink_carousel.webp" alt="Elena Beganović" style="width:100%">
+               <img src="images/portraits/portrait-elena.jpeg" alt="Elena Beganović" style="width:100%">
                  <div
                  class="container-about-page-meet-the-team container-meet-the-team-about-page text-within-card-about-page">
                  <h5 class="text-center heading-five-cards-meet-the-team">Elena Beganović </h5>
