changes to images about page and changes to copywriting

--- a/index.html
+++ b/index.html
@@ -171,7 +171,8 @@
     <div class="container">
       <div class="row align-items-center">
         <div class="col-8">
-          <a href="about.html" class="no-link-style"><h2>about</h2></a>
+          <a href="about.html" class="no-link-style"><h2>Let’s turn up the sass and serve some theatre realness!</h2>
+          </a>
         </div>
         <div class="col-4 text-end">
           <a href="about.html" class="btn btn-dark outfit-medium" style="font-size: 2vw;">what about us</a>
@@ -180,10 +181,10 @@
       <div class="row">
         <div class="col-8">
           <p>
-            We are a safe, inclusive space to read articles, watch interviews with LGBTQ+ actors and creators, and engage in meaningful discussions about representation, storytelling, and more!
-          </p>
-          <p>Whether you are passionate about Queer theatre or simply eager to learn more, 
-            our community welcomes everyone who values diversity on stage. <a href="about.html" class="no-link-style icon-style">More...</a></p>
+            Are you in love with Queer theatre and always in for good LGBTQ+ representation?<strong>&nbsp;So are we! </strong> </p>
+          <p>Welcome to your new favourite queer theatre world website where drama is celebrated, stories are celebrated and the LGBTQ+ community shines in the spotlight.
+		  We’re talking about a fabulous, inclusive space where you can dive into iconic interviews, bold conversations about representation with professionals and reviews about showstopping plays!
+	      Whether you already love LGBTQ theatre or you are curious, our community is wide open and waiting for you! Because theatre is better when everyone gets a role. <strong>This show is just about to start!</strong> <a href="about.html" class="no-link-style icon-style">More...</a></p>
         </div>
       </div>
     </div>
@@ -192,7 +193,8 @@
     <div class="container">
       <div class="row align-items-center">
         <div class="col-8">
-          <a href="blog.html" class="no-link-style"><h2>blog</h2></a>
+          <a href="blog.html" class="no-link-style"><h2>LGBTQ+ Theatre Uncovered</h2>
+          </a>
         </div>
         <div class="col-4 text-end">
           <a href="blog.html" class="btn btn-dark outfit-medium" style="font-size: 2vw;">get cultured</a>
@@ -218,7 +220,7 @@
     <div class="container">
       <div class="row align-items-center">
         <div class="col-8">
-          <a href="tickets.html" class="no-link-style"><h2>tickets</h2></a>
+          <a href="tickets.html" class="no-link-style"><h2>Be part of the moment</h2></a>
         </div>
         <div class="col-4 text-end">
           <a href="tickets.html" class="btn btn-dark outfit-medium" style="font-size: 2vw;">browse-like-compare</a>
