--- a/corporate.html
+++ b/corporate.html
@@ -195,7 +195,7 @@
         <a href="#sub2" class="subpoint">Credits</a>
 		<a href="#sub2" class="subpoint">Testing Report</a>
 		  
-		<a href="#Marketing">Marketing</a>
+		<a href="#section1">Marketing</a>
 		<a href="#sub1" class="subpoint">Context of campaign and promotional activities</a>
         <a href="#sub2" class="subpoint">Learning Points</a>
 		<a href="#sub2" class="subpoint">Future Planning</a>
@@ -306,7 +306,7 @@
         <h4 id="Production">Production</h4>
         <p>Final section content.</p>
 		
-		<h4 id="Marketing">Marketing</h4>
+		<h4 id="section1">Marketing</h4>
 		  
 			<h3 class="subheadings-content-part-corporate-page">Our Brand</h3>
 			<p> Out n Center is an inclusive theatre brand that strives for more realistic Lgbtq+ representation in theatre.</p>
