deleted dropdown in sidebar and made page
made singleticket.html

--- a/blog.html
+++ b/blog.html
@@ -29,7 +29,7 @@
           </a>
         </button>
         <button class="icon-style">
-          <a href="favourites.html" class="text-decoration-none text-reset">
+          <a href="cart.html" class="text-decoration-none text-reset">
             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-heart"
               viewBox="0 0 16 16">
               <path
@@ -56,17 +56,7 @@
             <li class="nav-item"><a class="nav-link" href="blog.html">blog</a></li>
             <li class="nav-item"><a class="nav-link" href="tickets.html">tickets</a></li>
             <li class="nav-item"><a class="nav-link" href="about.html">about</a></li>
-            <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown">
-                corporate
-              </a>
-              <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="corporate.html">Content</a></li>
-                <li><a class="dropdown-item" href="corporate.html">Management</a></li>
-                <li><a class="dropdown-item" href="corporate.html">Production</a></li>
-                <li><a class="dropdown-item" href="corporate.html">Marketing</a></li>
-              </ul>
-            </li>
+            <li class="nav-item"><a class="nav-link" href="corporate.html">corporate</a></li>
           </ul>
         </div>
       </div>
@@ -90,7 +80,7 @@
             </a>
           </button>
           <button class="icon-style icon-white">
-            <a href="favourites.html" class="text-decoration-none text-reset">
+            <a href="cart.html" class="text-decoration-none text-reset">
               <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-heart"
                 viewBox="0 0 16 16">
                 <path
@@ -106,32 +96,6 @@
           data-bs-target="#offcanvasScrollNavbar" aria-controls="offcanvasScrollNavbar">
           <span class="navbar-toggler-icon navbar-dark"></span>
         </button>
-        <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasScrollNavbar"
-          aria-labelledby="offcanvasScrollNavbarLabel">
-          <div class="offcanvas-header">
-            <h4 class="offcanvas-title outfit-medium" id="offcanvasScrollNavbarLabel">menu</h4>
-            <button type="button" class="btn-close" data-bs-dismiss="offcanvas"></button>
-          </div>
-          <div class="offcanvas-body">
-            <ul class="navbar-nav justify-content-end flex-grow-1 pe-3 ms-auto">
-              <li class="nav-item"><a class="nav-link" href="blog.html">blog</a></li>
-              <li class="nav-item"><a class="nav-link" href="tickets.html">tickets</a></li>
-              <li class="nav-item"><a class="nav-link" href="getrailed.html">getrailed</a></li>
-              <li class="nav-item"><a class="nav-link" href="about.html">about</a></li>
-              <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown">
-                  corporate
-                </a>
-                <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="corporate.html">Content</a></li>
-                  <li><a class="dropdown-item" href="corporate.html">Management</a></li>
-                  <li><a class="dropdown-item" href="corporate.html">Production</a></li>
-                  <li><a class="dropdown-item" href="corporate.html">Marketing</a></li>
-                </ul>
-              </li>
-            </ul>
-          </div>
-        </div>
       </div>
     </nav>
   <!--end of navigations-->
