--- a/cart.html
+++ b/cart.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>favourites | outncenter</title>
+  <title>cart | outncenter</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   <!--stylesheet for website layout-->
@@ -29,7 +29,7 @@
           </a>
         </button>
         <button class="icon-style">
-          <a href="favourites.html" class="text-decoration-none text-reset">
+          <a href="cart.html" class="text-decoration-none text-reset">
             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-heart"
               viewBox="0 0 16 16">
               <path
@@ -56,17 +56,7 @@
             <li class="nav-item"><a class="nav-link" href="blog.html">blog</a></li>
             <li class="nav-item"><a class="nav-link" href="tickets.html">tickets</a></li>
             <li class="nav-item"><a class="nav-link" href="about.html">about</a></li>
-            <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown">
-                corporate
-              </a>
-              <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="corporate.html">Content</a></li>
-                <li><a class="dropdown-item" href="corporate.html">Management</a></li>
-                <li><a class="dropdown-item" href="corporate.html">Production</a></li>
-                <li><a class="dropdown-item" href="corporate.html">Marketing</a></li>
-              </ul>
-            </li>
+            <li class="nav-item"><a class="nav-link" href="corporate.html">corporate</a></li>
           </ul>
         </div>
       </div>
@@ -90,7 +80,7 @@
             </a>
           </button>
           <button class="icon-style icon-white">
-            <a href="favourites.html" class="text-decoration-none text-reset">
+            <a href="cart.html" class="text-decoration-none text-reset">
               <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-heart"
                 viewBox="0 0 16 16">
                 <path
@@ -106,32 +96,7 @@
           data-bs-target="#offcanvasScrollNavbar" aria-controls="offcanvasScrollNavbar">
           <span class="navbar-toggler-icon navbar-dark"></span>
         </button>
-        <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasScrollNavbar"
-          aria-labelledby="offcanvasScrollNavbarLabel">
-          <div class="offcanvas-header">
-            <h4 class="offcanvas-title outfit-medium" id="offcanvasScrollNavbarLabel">menu</h4>
-            <button type="button" class="btn-close" data-bs-dismiss="offcanvas"></button>
-          </div>
-          <div class="offcanvas-body">
-            <ul class="navbar-nav justify-content-end flex-grow-1 pe-3 ms-auto">
-              <li class="nav-item"><a class="nav-link" href="blog.html">blog</a></li>
-              <li class="nav-item"><a class="nav-link" href="tickets.html">tickets</a></li>
-              <li class="nav-item"><a class="nav-link" href="getrailed.html">getrailed</a></li>
-              <li class="nav-item"><a class="nav-link" href="about.html">about</a></li>
-              <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown">
-                  corporate
-                </a>
-                <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="corporate.html">Content</a></li>
-                  <li><a class="dropdown-item" href="corporate.html">Management</a></li>
-                  <li><a class="dropdown-item" href="corporate.html">Production</a></li>
-                  <li><a class="dropdown-item" href="corporate.html">Marketing</a></li>
-                </ul>
-              </li>
-            </ul>
-          </div>
-        </div>
+        
       </div>
     </nav>
 <!--end of navigations-->
@@ -140,7 +105,7 @@
   <main>
     <div class="container">
       <div class="row">
-        <h2>my faves</h2>
+        <h2>cart</h2>
       </div>
     </div>
     <br>
@@ -159,7 +124,7 @@
                 <p class="card-text"><small class="text-body-secondary">Last updated 3 mins ago</small></p>
               </div>
               <div class="d-flex justify-content-end">
-                <a href="favourites.html" class="text-decoration-none text-reset icon-style">
+                <a href="cart.html" class="text-decoration-none text-reset icon-style">
                   <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-heart-fill" viewBox="0 0 16 16">
                     <path d="M8 1.314C12.438-3.248 23.534 4.735 8 15-7.534 4.736 3.562-3.248 8 1.314z"/>
                   </svg>
