--- a/corporate.html
+++ b/corporate.html
@@ -56,70 +56,9 @@
   <!--DO NOT START YOUR CONTENT HERE. PUT IT IN <MAIN> THAT IS FURTHER DOWN IN THE CODE-->
   <!-- start down-ScrollNavbar -->
   <nav class="scrollnavbar navbar shadow" id="scrollnavbar">
-  <div class="container-fluid">
-    <div class="justify-content-start">
-      <button class="icon-style">
-        <a href="profile.html" class="text-decoration-none text-reset">
-          <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
-            class="bi bi-person-circle" viewBox="0 0 16 16">
-            <path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0" />
-            <path fill-rule="evenodd"
-              d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8m8-7a7 7 0 0 0-5.468 11.37C3.242 11.226 4.805 10 8 10s4.757 1.225 5.468 2.37A7 7 0 0 0 8 1" />
-          </svg>
-        </a>
-      </button>
-      <button class="icon-style">
-        <a href="favourites.html" class="text-decoration-none text-reset">
-          <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-heart"
-            viewBox="0 0 16 16">
-            <path
-              d="m8 2.748-.717-.737C5.6.281 2.514.878 1.4 3.053c-.523 1.023-.641 2.5.314 4.385.92 1.815 2.834 3.989 6.286 6.357 3.452-2.368 5.365-4.542 6.286-6.357.955-1.886.838-3.362.314-4.385C13.486.878 10.4.28 8.717 2.01zM8 15C-7.333 4.868 3.279-3.04 7.824 1.143q.09.083.176.171a3 3 0 0 1 .176-.17C12.72-3.042 23.333 4.867 8 15" />
-          </svg>
-        </a>
-      </button>
-    </div>
-    <div class="d-flex justfify-content-center">
-      <a class="navbar-brand outfit-semibold brandname-nav-margin icon-style" href="index.html">outncenter</a>
-    </div>
-    <button class="navbar-toggler icon-style" type="button" data-bs-toggle="offcanvas"
-      data-bs-target="#offcanvasScrollNavbar" aria-controls="offcanvasScrollNavbar">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasScrollNavbar"
-      aria-labelledby="offcanvasScrollNavbarLabel">
-      <div class="offcanvas-header">
-        <h4 class="offcanvas-title outfit-medium" id="offcanvasScrollNavbarLabel">menu</h4>
-        <button type="button" class="btn-close close-button" data-bs-dismiss="offcanvas"></button>
-      </div>
-      <div class="offcanvas-body">
-        <ul class="navbar-nav justify-content-end flex-grow-1 pe-3 ms-auto">
-          <li class="nav-item"><a class="nav-link" href="blog.html">blog</a></li>
-          <li class="nav-item"><a class="nav-link" href="tickets.html">tickets</a></li>
-          <li class="nav-item"><a class="nav-link" href="about.html">about</a></li>
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown">
-              corporate
-            </a>
-            <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="corporate.html">Content</a></li>
-              <li><a class="dropdown-item" href="corporate.html">Management</a></li>
-              <li><a class="dropdown-item" href="corporate.html">Production</a></li>
-              <li><a class="dropdown-item" href="corporate.html">Marketing</a></li>
-            </ul>
-          </li>
-        </ul>
-      </div>
-    </div>
-  </div>
-</nav>
-<!--end down-scrollnavbar-->
-
-<!-- Carousel and its navigation-->
-<div id="carouselExampleDark" class="carousel slide" data-bs-ride="carousel">
-  <nav class="navbar bg-black" style="padding-left: 7%; padding-right: 7%;">
     <div class="container-fluid">
       <div class="justify-content-start">
-        <button class="icon-style icon-white">
+        <button class="icon-style">
           <a href="profile.html" class="text-decoration-none text-reset">
             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
               class="bi bi-person-circle" viewBox="0 0 16 16">
@@ -129,8 +68,8 @@
             </svg>
           </a>
         </button>
-        <button class="icon-style icon-white">
-          <a href="favourites.html" class="text-decoration-none text-reset">
+        <button class="icon-style">
+          <a href="cart.html" class="text-decoration-none text-reset">
             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-heart"
               viewBox="0 0 16 16">
               <path
@@ -140,40 +79,65 @@
         </button>
       </div>
       <div class="d-flex justfify-content-center">
-        <a class="navbar-brand outfit-semibold brandname-nav-margin icon-style icon-white" href="index.html">outncenter</a>
+        <a class="navbar-brand outfit-semibold brandname-nav-margin icon-style" href="index.html">outncenter</a>
       </div>
       <button class="navbar-toggler icon-style" type="button" data-bs-toggle="offcanvas"
         data-bs-target="#offcanvasScrollNavbar" aria-controls="offcanvasScrollNavbar">
-        <span class="navbar-toggler-icon navbar-dark"></span>
+        <span class="navbar-toggler-icon"></span>
       </button>
       <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasScrollNavbar"
         aria-labelledby="offcanvasScrollNavbarLabel">
         <div class="offcanvas-header">
           <h4 class="offcanvas-title outfit-medium" id="offcanvasScrollNavbarLabel">menu</h4>
-          <button type="button" class="btn-close" data-bs-dismiss="offcanvas"></button>
+          <button type="button" class="btn-close close-button" data-bs-dismiss="offcanvas"></button>
         </div>
         <div class="offcanvas-body">
           <ul class="navbar-nav justify-content-end flex-grow-1 pe-3 ms-auto">
             <li class="nav-item"><a class="nav-link" href="blog.html">blog</a></li>
             <li class="nav-item"><a class="nav-link" href="tickets.html">tickets</a></li>
-            <li class="nav-item"><a class="nav-link" href="getrailed.html">getrailed</a></li>
             <li class="nav-item"><a class="nav-link" href="about.html">about</a></li>
-            <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown">
-                corporate
-              </a>
-              <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="corporate.html">Content</a></li>
-                <li><a class="dropdown-item" href="corporate.html">Management</a></li>
-                <li><a class="dropdown-item" href="corporate.html">Production</a></li>
-                <li><a class="dropdown-item" href="corporate.html">Marketing</a></li>
-              </ul>
-            </li>
+            <li class="nav-item"><a class="nav-link" href="corporate.html">corporate</a></li>
           </ul>
         </div>
       </div>
     </div>
   </nav>
+  <!--end down-scrollnavbar-->
+
+  <!-- Carousel and its navigation-->
+  <div id="carouselExampleDark" class="carousel slide" data-bs-ride="carousel">
+    <nav class="navbar bg-black" style="padding-left: 7%; padding-right: 7%;">
+      <div class="container-fluid">
+        <div class="justify-content-start">
+          <button class="icon-style icon-white">
+            <a href="profile.html" class="text-decoration-none text-reset">
+              <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                class="bi bi-person-circle" viewBox="0 0 16 16">
+                <path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0" />
+                <path fill-rule="evenodd"
+                  d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8m8-7a7 7 0 0 0-5.468 11.37C3.242 11.226 4.805 10 8 10s4.757 1.225 5.468 2.37A7 7 0 0 0 8 1" />
+              </svg>
+            </a>
+          </button>
+          <button class="icon-style icon-white">
+            <a href="cart.html" class="text-decoration-none text-reset">
+              <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-heart"
+                viewBox="0 0 16 16">
+                <path
+                  d="m8 2.748-.717-.737C5.6.281 2.514.878 1.4 3.053c-.523 1.023-.641 2.5.314 4.385.92 1.815 2.834 3.989 6.286 6.357 3.452-2.368 5.365-4.542 6.286-6.357.955-1.886.838-3.362.314-4.385C13.486.878 10.4.28 8.717 2.01zM8 15C-7.333 4.868 3.279-3.04 7.824 1.143q.09.083.176.171a3 3 0 0 1 .176-.17C12.72-3.042 23.333 4.867 8 15" />
+              </svg>
+            </a>
+          </button>
+        </div>
+        <div class="d-flex justfify-content-center">
+          <a class="navbar-brand outfit-semibold brandname-nav-margin icon-style icon-white" href="index.html">outncenter</a>
+        </div>
+        <button class="navbar-toggler icon-style" type="button" data-bs-toggle="offcanvas"
+          data-bs-target="#offcanvasScrollNavbar" aria-controls="offcanvasScrollNavbar">
+          <span class="navbar-toggler-icon navbar-dark"></span>
+        </button>
+      </div>
+    </nav>
   <!--end of navigations-->
 
   <!--main for your content and text starts here-->
