--- a/tickets.html
+++ b/tickets.html
@@ -10,6 +10,25 @@
   <!--stylesheet for website layout-->
   <link href="css/styles.css" rel="stylesheet">
   <!--add your own styles.css for your main's layout. Use bootstrap grids!-->
+	<style>
+  .card-link-wrapper {
+    position: relative;
+  }
+
+  .card-clickable-link {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 1;
+  }
+
+  .icon-style {
+    z-index: 2;
+    position: relative;
+  }
+</style>
 </head>
 
 <body>
@@ -120,33 +139,34 @@
       <!-- Card 1 -->
        
       <div class="container">
-        <div class="card mb-3">
-          <div class="row g-0 d-flex">
-            <div class="col-md-4">
-              <img src="images/tickets-images/eclipse-hearts-without-text.jpg" class="card-img-top" alt="eclipse-hearts-photo">
-            </div>
-            <div class="col-md-8">
-              <div class="card-body d-flex flex-column justify-content-between">
-                <div>
-                  <h4 class="card-title">Eclipse Hearts</h4>
-                  <p>3 Apr - 3 May 2025</p>
-                  <p class="card-text">A Sappho
-                    inspired retelling. As her passion for a younger muse intensifies, the line between art and obsession begins to blur. Set in modern times, Eclipse Hearts follows a driven writer whose orderly life unravels in the wake of unreturned love.
-                  </p>
-                  <p class="card-text"><small class="text-body-secondary">Duration: 1 hour 45 minutes (no intermission)</small></p>
-                </div>
-                <div class="d-flex justify-content-end">
-                  <a href="favourites.html" class="text-decoration-none text-reset icon-style">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-heart-fill"
-                      viewBox="0 0 16 16">
-                      <path d="M8 1.314C12.438-3.248 23.534 4.735 8 15-7.534 4.736 3.562-3.248 8 1.314z" />
-                    </svg>
-                  </a>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
+        <div class="card mb-3 card-link-wrapper">
+		  <!-- Invisible link layer -->
+		  <a href="singleticket.html" class="card-clickable-link"></a>
+
+		  <div class="row g-0 d-flex">
+			<div class="col-md-4">
+			  <img src="images/tickets-images/eclipse-hearts-without-text.jpg" class="card-img-top" alt="eclipse-hearts-photo">
+			</div>
+			<div class="col-md-8">
+			  <div class="card-body d-flex flex-column justify-content-between">
+				<div>
+				  <h4 class="card-title">Eclipse Hearts</h4>
+				  <p>3 Apr - 3 May 2025</p>
+				  <p class="card-text">A Sappho inspired retelling. As her passion for a younger muse intensifies, the line between art and obsession begins to blur. Set in modern times, Eclipse Hearts follows a driven writer whose orderly life unravels in the wake of unreturned love.</p>
+				  <p class="card-text"><small class="text-body-secondary">Duration: 1 hour 45 minutes (no intermission)</small></p>
+				</div>
+				<div class="d-flex justify-content-end">
+				  <a href="favourites.html" class="text-decoration-none text-reset icon-style">
+					<svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-heart-fill"
+					  viewBox="0 0 16 16">
+					  <path d="M8 1.314C12.438-3.248 23.534 4.735 8 15-7.534 4.736 3.562-3.248 8 1.314z" />
+					</svg>
+				  </a>
+				</div>
+			  </div>
+			</div>
+		  </div>
+		</div>
       </div>
       <!-- Card 2 -->
       <div class="container">
