--- a/tickets.html
+++ b/tickets.html
@@ -168,9 +168,13 @@
 		  </div>
 		</div>
       </div>
+	  
       <!-- Card 2 -->
+	  
       <div class="container">
-        <div class="card mb-3">
+        <div class="card mb-3 card-link-wrapper">
+		  <!-- Invisible link layer -->
+		  <a href="singleticket.html" class="card-clickable-link"></a>
           <div class="row g-0 d-flex">
             <div class="col-md-4">
               <img src="images/tickets-images/midnight.jpg" class="card-img-top" alt="eclipse-hearts-photo">
@@ -202,7 +206,9 @@
     
     <!--more cards here-->
     <div class="container">
-      <div class="card mb-3">
+      <div class="card mb-3 card-link-wrapper">
+		  <!-- Invisible link layer -->
+		  <a href="singleticket.html" class="card-clickable-link"></a>
         <div class="row g-0 d-flex">
           <div class="col-md-4">
             <img src="images/tickets-images/piano.jpg" class="card-img-top" alt="eclipse-hearts-photo">
@@ -233,7 +239,9 @@
     </div>
 
     <div class="container">
-      <div class="card mb-3">
+      <div class="card mb-3 card-link-wrapper">
+		  <!-- Invisible link layer -->
+		  <a href="singleticket.html" class="card-clickable-link"></a>
         <div class="row g-0 d-flex">
           <div class="col-md-4">
             <img src="images/tickets-images/letter.jpg" class="card-img-top" alt="eclipse-hearts-photo">
@@ -264,7 +272,9 @@
     </div>
 
     <div class="container">
-      <div class="card mb-3">
+      <div class="card mb-3 card-link-wrapper">
+		  <!-- Invisible link layer -->
+		  <a href="singleticket.html" class="card-clickable-link"></a>
         <div class="row g-0 d-flex">
           <div class="col-md-4">
             <img src="images/tickets-images/last_curtain.jpg" class="card-img-top" alt="eclipse-hearts-photo">
