--- a/index.html
+++ b/index.html
@@ -145,7 +145,8 @@
     
       <div class="row gy-4 gx-4"> <!-- spacing between rows and columns -->
         <!-- Card 1 -->
-        <div class="col-12 col-md-6 col-xl-4">
+        <div class="col-12 col-md-6 col-xl-4 card-link-wrapper">
+		  <a href="singleticket.html" class="card-clickable-link"></a>
           <div class="card h-100">
             <img src="images/tickets-images/eclipse-hearts-without-text.jpg" class="card-img-top" alt="eclipse-hearts-photo">
             <div class="card-body d-flex flex-column justify-content-between">
@@ -169,7 +170,8 @@
         </div>
     
         <!-- Card 2 -->
-        <div class="col-12 col-md-6 col-xl-4">
+        <div class="col-12 col-md-6 col-xl-4 card-link-wrapper">
+		  <a href="singleticket.html" class="card-clickable-link"></a>
           <div class="card h-100">
             <img src="images/tickets-images/romeo-and-romeo-without-text.jpg" class="card-img-top" alt="romeo-and-romeo-photo">
             <div class="card-body d-flex flex-column justify-content-between">
@@ -198,8 +200,9 @@
         </div>
 
          <!-- Card 3 -->
-         <div class="col-12 col-md-6 col-xl-4">
-          <div class="card h-100">
+         <div class="col-12 col-md-6 col-xl-4 card-link-wrapper">
+            <a href="singleticket.html" class="card-clickable-link"></a>
+			<div class="card h-100">
             <img src="images/tickets-images/moonlight-call-without-text.jpg" class="card-img-top" alt="moonlight-call-photo">
             <div class="card-body d-flex flex-column justify-content-between">
               <div>
