--- a/about.html
+++ b/about.html
@@ -176,7 +176,7 @@
     <!--Start of first container for Meet the team-->
            <div class="column-about-page-meet-the-team">
              <div class="card">
-               <img src="images/portraits/portrait-freya.png" alt="Freya Willems" style="width:100%">
+               <img src="images/portraits/portrait-freya.jpg" alt="Freya Willems" style="width:100%">
                  <div
                  class="container-about-page-meet-the-team text-within-card-about-page">
                  <h5 class="text-center heading-five-cards-meet-the-team">Freya Willems</h5>
@@ -190,7 +190,7 @@
      <!--Start of second container for Meet the team-->
            <div class="column-about-page-meet-the-team">
              <div class="card">
-               <img src="images/portraits/portrait-daniel.png" alt="Dániel Horváth " style="width:100%">
+               <img src="images/portraits/portrait-daniel.jpg" alt="Dániel Horváth " style="width:100%">
                  <div
                  class="container-about-page-meet-the-team text-within-card-about-page">
                  <h5 class="text-center heading-five-cards-meet-the-team">Dániel Horváth</h5>
@@ -203,7 +203,7 @@
        <!--Start of third container for Meet the team-->
            <div class="column-about-page-meet-the-team">
              <div class="card">
-               <img src="images/portraits/portrait-elena.png" alt="Elena Beganović" style="width:100%">
+               <img src="images/portraits/portrait-elena.jpg" alt="Elena Beganović" style="width:100%">
                  <div
                  class="container-about-page-meet-the-team text-within-card-about-page">
                  <h5 class="text-center heading-five-cards-meet-the-team">Elena Beganović </h5>
@@ -216,7 +216,7 @@
        <!--Start of fourth container for Meet the team-->
            <div class="column-about-page-meet-the-team">
              <div class="card">
-               <img src="images/portraits/portrait-mees.png" alt="Mees de Wilde" style="width:100%">
+               <img src="images/portraits/portrait-mees.jpg" alt="Mees de Wilde" style="width:100%">
                  <div
                  class="container-about-page-meet-the-team text-within-card-about-page">
                  <h5 class="text-center heading-five-cards-meet-the-team">Mees de Wilde </h5>
