--- a/index.html
+++ b/index.html
@@ -171,15 +171,12 @@
         <!-- Card 2 -->
         <div class="col-12 col-md-6 col-xl-4">
           <div class="card h-100">
-            <img src="images/tickets-images/romeo-and-romeo-without-text.jpg" class="card-img-top" alt="romeo-and-romeo-photo">
+            <img src="images/tickets-images/midnight.jpg" class="card-img-top" alt="romeo-and-romeo-photo">
             <div class="card-body d-flex flex-column justify-content-between">
               <div>
-                <h4 class="card-title">Romeo and Romeo</h4>
-                <p>6 May - 6 June 2025</p>
-                <p class="card-text">Two men, bound to duty, 
-                  are consumed by a forbidden love that spirals into betrayal, vengeance, 
-                  and a devastating fate neither can escape. The name says it all. 
-                  <a href="tickets.html" class="no-link-style icon-style">More...</a>
+                <h4 class="card-title">Midnight in the Violet Garden</h4>
+                <p>25 May 2025 - 25 May 2026</p>
+                <p class="card-text">In a surreal dreamscape where time bends and flowers whisper, a lonely astronomer encounters a mysterious child who may hold the key to her forgotten future. A poetic, visually rich play about longing and letting go.
                 </p>
                 <p class="card-text"><small class="text-body-secondary">Last updated 3 mins ago</small></p>
               </div>
@@ -200,13 +197,12 @@
          <!-- Card 3 -->
          <div class="col-12 col-md-6 col-xl-4">
 			<div class="card h-100">
-            <img src="images/tickets-images/moonlight-call-without-text.jpg" class="card-img-top" alt="moonlight-call-photo">
+            <img src="images/tickets-images/piano.jpg" class="card-img-top" alt="moonlight-call-photo">
             <div class="card-body d-flex flex-column justify-content-between">
               <div>
-                <h4 class="card-title">Moonlight Call</h4>
-                <p>10 June - 10 July 2025</p>
-                <p class="card-text">Three souls share only an ancient unspoken connection, defying a world in a rose tinted view. A fantasy look on the AroAce spectrum.
-                   <a href="tickets.html" class="no-link-style icon-style">More...</a>
+                <h4 class="card-title">Clockwork Silence</h4>
+                <p>30 June - 30 August 2025</p>
+                <p class="card-text">In a town where music is banned, two teenage boys—quiet pianist Leo and bold newcomer Max—start a secret orchestra in an old clocktower. As rebellion brews, so does a quiet romance that challenges everything they’ve been told.
                 </p>
                 <p class="card-text"><small class="text-body-secondary">Last updated 3 mins ago</small></p>
               </div>
