--- a/index.html
+++ b/index.html
@@ -117,13 +117,13 @@
     </div>
     <div class="carousel-inner">
       <div class="carousel-item active" data-bs-interval="10000">
-        <img src="images/theatre-shows/theatre-show-eclipse-hearts.png" class="d-block w-100" alt="eclipse hearts show">
+        <img src="images/theatre-shows/theatre-show-eclipse-hearts.jpg" class="d-block w-100" alt="eclipse hearts show">
       </div>
       <div class="carousel-item" data-bs-interval="2000">
-        <img src="images/theatre-shows/theatre-show-romeo-and-romeo.png" class="d-block w-100" alt="romeo and romeo show">
+        <img src="images/theatre-shows/theatre-show-romeo-and-romeo.jpg" class="d-block w-100" alt="romeo and romeo show">
       </div>
       <div class="carousel-item">
-        <img src="images/theatre-shows/theatre-show-moonlight-call.png" class="d-block w-100" alt="moonlight call show">
+        <img src="images/theatre-shows/theatre-show-moonlight-call.jpg" class="d-block w-100" alt="moonlight call show">
       </div>
     </div>
   </div>
@@ -171,12 +171,12 @@
         <!-- Card 2 -->
         <div class="col-12 col-md-6 col-xl-4">
           <div class="card h-100">
-            <img src="images/tickets-images/midnight.jpg" class="card-img-top" alt="romeo-and-romeo-photo">
+            <img src="images/tickets-images/romeo-and-romeo-without-text.jpg" class="card-img-top" alt="romeo-and-romeo-photo">
             <div class="card-body d-flex flex-column justify-content-between">
               <div>
-                <h4 class="card-title">Midnight in the Violet Garden</h4>
-                <p>25 May 2025 - 25 May 2026</p>
-                <p class="card-text">In a surreal dreamscape where time bends and flowers whisper, a lonely astronomer encounters a mysterious child who may hold the key to her forgotten future. A poetic, visually rich play about longing and letting go.
+                <h4 class="card-title">Romeo and Romeo</h4>
+                <p>6 May - 6 June 2025</p>
+                <p class="card-text">...
                 </p>
                 <p class="card-text"><small class="text-body-secondary">Last updated 3 mins ago</small></p>
               </div>
@@ -197,13 +197,12 @@
          <!-- Card 3 -->
          <div class="col-12 col-md-6 col-xl-4">
 			<div class="card h-100">
-            <img src="images/tickets-images/piano.jpg" class="card-img-top" alt="moonlight-call-photo">
+            <img src="images/tickets-images/moonlight-call-without-text.jpg" class="card-img-top" alt="moonlight-call-photo">
             <div class="card-body d-flex flex-column justify-content-between">
               <div>
-                <h4 class="card-title">Clockwork Silence</h4>
-                <p>30 June - 30 August 2025</p>
-                <p class="card-text">In a town where music is banned, two teenage boys—quiet pianist Leo and bold newcomer Max—start a secret orchestra in an old clocktower. As rebellion brews, so does a quiet romance that challenges everything they’ve been told.
-                </p>
+                <h4 class="card-title">Moonlight Call</h4>
+                <p>10 June - 10 July 2025</p>
+                <p class="card-text">...</p>
                 <p class="card-text"><small class="text-body-secondary">Last updated 3 mins ago</small></p>
               </div>
               <div class="d-flex justify-content-end">
