--- a/tickets.html
+++ b/tickets.html
@@ -169,7 +169,73 @@
 		</div>
       </div>
 	  
-      <!-- Card 2 -->
+	  <!-- Card 2 -->
+       
+      <div class="container">
+        <div class="card mb-3 card-link-wrapper">
+		  <!-- Invisible link layer -->
+		  <a href="singleticket.html" class="card-clickable-link"></a>
+
+		  <div class="row g-0 d-flex">
+			<div class="col-md-4">
+			  <img src="images/tickets-images/romeo-and-romeo-without-text.jpg" class="card-img-top" alt="eclipse-hearts-photo">
+			</div>
+			<div class="col-md-8">
+			  <div class="card-body d-flex flex-column justify-content-between">
+				<div>
+				  <h4 class="card-title">Romeo and Romeo</h4>
+				  <p>6 May - 6 June 2025</p>
+				  <p class="card-text">...</p>
+				  <p class="card-text"><small class="text-body-secondary">Duration: 1 hour 30 minutes (no intermission)</small></p>
+				</div>
+				<div class="d-flex justify-content-end">
+				  <a href="favourites.html" class="text-decoration-none text-reset icon-style">
+					<svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-heart-fill"
+					  viewBox="0 0 16 16">
+					  <path d="M8 1.314C12.438-3.248 23.534 4.735 8 15-7.534 4.736 3.562-3.248 8 1.314z" />
+					</svg>
+				  </a>
+				</div>
+			  </div>
+			</div>
+		  </div>
+		</div>
+      </div>
+	  
+	  <!-- Card 3 -->
+       
+      <div class="container">
+        <div class="card mb-3 card-link-wrapper">
+		  <!-- Invisible link layer -->
+		  <a href="singleticket.html" class="card-clickable-link"></a>
+
+		  <div class="row g-0 d-flex">
+			<div class="col-md-4">
+			  <img src="images/tickets-images/moonlight-call-without-text.jpg" class="card-img-top" alt="eclipse-hearts-photo">
+			</div>
+			<div class="col-md-8">
+			  <div class="card-body d-flex flex-column justify-content-between">
+				<div>
+				  <h4 class="card-title">Moonlight Call</h4>
+				  <p>10 June - 10 July 2025</p>
+				  <p class="card-text">...</p>
+				  <p class="card-text"><small class="text-body-secondary">Duration: 2 hours 15 minutes (no intermission)</small></p>
+				</div>
+				<div class="d-flex justify-content-end">
+				  <a href="favourites.html" class="text-decoration-none text-reset icon-style">
+					<svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-heart-fill"
+					  viewBox="0 0 16 16">
+					  <path d="M8 1.314C12.438-3.248 23.534 4.735 8 15-7.534 4.736 3.562-3.248 8 1.314z" />
+					</svg>
+				  </a>
+				</div>
+			  </div>
+			</div>
+		  </div>
+		</div>
+      </div>
+	  
+      <!-- Card 4 -->
 	  
       <div class="container">
         <div class="card mb-3 card-link-wrapper">
