--- a/blog.html
+++ b/blog.html
@@ -106,11 +106,20 @@
     <div class="container">
       <div class="row align-items-center">
         <div class="col-8">
-          <a href="blog.html" class="no-link-style"><h2>blog</h2></a>
+          <a href="blog.html" class="no-link-style"><h3>blog</h3></a>
         </div>
         <div class="col-4 text-end">
-          <a href="blog.html" class="btn btn-outline-dark outfit-medium" style="font-size: 2vw;">filter</a>
-        </div>
+		  <div class="dropdown">
+			<button class="btn btn-outline-dark dropdown-toggle outfit-medium" type="button" id="filterDropdown" data-bs-toggle="dropdown" aria-expanded="false" style="font-size: 2vw;">
+			  Filter
+			</button>
+			<ul class="dropdown-menu dropdown-menu-end" aria-labelledby="filterDropdown">
+			  <li><a class="dropdown-item" href="#">Latest</a></li>
+			  <li><a class="dropdown-item" href="#">Most popular</a></li>
+			  <li><a class="dropdown-item" href="#">Trending</a></li>
+			</ul>
+		  </div>
+		</div>
       </div>
     </div>
     <br>
