--- a/tickets.html
+++ b/tickets.html
@@ -136,7 +136,7 @@
 			  </div>
 			  <div class="form-check">
 				<input class="form-check-input" type="checkbox" value="" id="filter2">
-				<label class="form-check-label" for="filter2">Comdey</label>
+				<label class="form-check-label" for="filter2">Comedy</label>
 			  </div>
 			  <div class="form-check">
 				<input class="form-check-input" type="checkbox" value="" id="filter3">
