navbar sidebar searchbar second push

--- a/index.html
+++ b/index.html
@@ -288,7 +288,7 @@
     <div class="container">
       <div class="row align-items-center">
         <div class="col-9">
-          <a href="blog.html" class="no-link-style"><h2>LGBTQ+ Theatre Uncovered</h2>
+          <a href="blog.html" class="no-link-style"><h2>LGBTQ+ Theatre Unmasked</h2>
           </a>
         </div>
         <div class="col-3 text-end">
