index about images

--- a/about.html
+++ b/about.html
@@ -184,7 +184,7 @@
    <!--Container for about-->
     <div class="container">
      <div class="row">
-      <h2 class="about-font-size">we're outncenter</h2>
+      <h2 class="about-font-size">We're outncenter</h2>
      </div>
     </div>
    <!--End of container for about-->
