--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
 <!--main for your content and text starts here-->
   <main>
     <!--tickets container-->
-    <div class="container">
+    <div class="container main-margin-upper">
       <div class="row align-items-center">
         <div class="col-8">
           <a href="tickets.html" class="no-link-style"><h2>Step Into the Scene</h2></a>
@@ -227,7 +227,7 @@
 
         <!-- Card 1 -->
         <div class="col-12 col-md-6 col-xl-4">
-          <div class="card h-100 card-link-wrapper">
+          <div class="card h-100 card-link-wrapper card-text-white" style="background-color: #B93D22;">
             <!-- Invisible link layer -->
 		       <a href="singleticket.html" class="card-clickable-link"></a>
             <img src="images/tickets-images/eclipse-hearts-without-text.jpg" class="card-img-top" alt="eclipse-hearts-photo">
@@ -237,16 +237,7 @@
                 <p>3 Apr - 3 May 2025</p>
                 <p class="card-text">Bound by desire, a woman faces the distructive power of unrequited love. A Sappho inspired retelling. 
                 </p>
-                <p class="card-text"><small class="text-body-secondary">Last updated 3 mins ago</small></p>
-              </div>
-              <div class="d-flex justify-content-end" style="z-index: 2;">
-                <button class="icon-style icon-white">
-                  <a href="cart.html" class="text-decoration-none text-reset">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-cart" viewBox="0 0 16 16">
-                      <path d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .491.592l-1.5 8A.5.5 0 0 1 13 12H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5M3.102 4l1.313 7h8.17l1.313-7zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4m7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4m-7 1a1 1 0 1 1 0 2 1 1 0 0 1 0-2m7 0a1 1 0 1 1 0 2 1 1 0 0 1 0-2"/>
-                    </svg>
-                  </a>
-                </button>
+                <p class="card-text card-text-white"><small>Last updated 3 mins ago</small></p>
               </div>
               <!---pop-up login heart-->
               <div class="d-flex justify-content-end" data-bs-toggle="modal" data-bs-target="#exampleModal" role="button" style="z-index: 2;">
@@ -263,7 +254,7 @@
     
         <!-- Card 2 -->
         <div class="col-12 col-md-6 col-xl-4">
-          <div class="card h-100 card-link-wrapper">
+          <div class="card h-100 card-link-wrapper card-text-white" style="background-color: #B3298D;">
             <!-- Invisible link layer -->
 		       <a href="singleticket.html" class="card-clickable-link"></a>
             <img src="images/tickets-images/romeo-and-romeo-without-text.jpg" class="card-img-top" alt="romeo-and-romeo-photo">
@@ -274,7 +265,7 @@
                 <p class="card-text">
                   Romeo and Romeo follows two young men torn between love and family loyalty in a world divided by conflict. Their journey challenges the boundaries of tradition and the power of forbidden love.
                 </p>
-                <p class="card-text"><small class="text-body-secondary">Last updated 3 mins ago</small></p>
+                <p class="card-text card-text-white"><small>Last updated 3 mins ago</small></p>
               </div>
               <div class="d-flex justify-content-end" data-bs-toggle="modal" data-bs-target="#exampleModal" role="button" style="z-index: 2;">
                 <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-heart"
@@ -289,7 +280,7 @@
 
          <!-- Card 3 -->
          <div class="col-12 col-md-6 col-xl-4">
-			<div class="card h-100 card-link-wrapper">
+			<div class="card h-100 card-link-wrapper card-text-white" style="background-color: #740318;">
         <!-- Invisible link layer -->
         <a href="singleticket.html" class="card-clickable-link"></a>
             <img src="images/tickets-images/moonlight-call-without-text.jpg" class="card-img-top" alt="moonlight-call-photo">
@@ -298,7 +289,7 @@
                 <h4 class="card-title">Moonlight Call</h4>
                 <p>10 June - 10 July 2025</p>
                 <p class="card-text">Moonlight Call follows three individuals bound by fate as they journey through a world where emotions take shape, unlocking the power of untold visions along the way.</p>
-                <p class="card-text"><small class="text-body-secondary">Last updated 3 mins ago</small></p>
+                <p class="card-text card-text-white"><small>Last updated 3 mins ago</small></p>
               </div>
               <div class="d-flex justify-content-end" data-bs-toggle="modal" data-bs-target="#exampleModal" role="button" style="z-index: 2;">
                 <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-heart"
@@ -317,10 +308,11 @@
     <br>
 
     <!--blog container-->
-    <div class="container">
+    <div class="container main-margin-upper">
       <div class="row align-items-center">
         <div class="col-9">
-          <a href="blog.html" class="no-link-style"><h2>LGBTQ+ Theatre Unmasked</h2>
+          <a href="blog.html" class="no-link-style">
+            <h2>The Spotlight Catalogue</h2>
           </a>
         </div>
         <div class="col-3 text-end">
@@ -332,45 +324,72 @@
         <div class="col-12 col-md-6">
           <a href="blog.html" class="no-link-style">
             <img src="images/blog-page-images/two_men.jpg" class="img-fluid" alt="template">
-            <h5 class= "blogtitle">Queer Theater Fans Speak: Why Representation Matters On Stage</h5></a>
-           <p class= "date">29.04.2025</p>
+            <h5 class="blogtitle">Queer Theater Fans Speak: Why Representation Matters On Stage</h5>
           </a>
-       </div>
-       <div class="col-12 col-md-6">
-        <a href="blog.html" class="no-link-style">
-          <img src="images/blog-page-images/man_in_makeup.jpg" class="img-fluid" alt="template">
-          <h5 class= "blogtitle">Inside the Spotlight: Interviews with Queer Theater Stars</h5></a>
-          <p class= "date">23.04.2025</p>
-        </a>
-       </div>
+          <p class="date">29.04.2025</p>
+          </a>
+        </div>
+        <div class="col-12 col-md-6">
+          <a href="blog.html" class="no-link-style">
+            <img src="images/blog-page-images/man_in_makeup.jpg" class="img-fluid" alt="template">
+            <h5 class="blogtitle">Inside the Spotlight: Interviews with Queer Theater Stars</h5>
+          </a>
+          <p class="date">23.04.2025</p>
+          </a>
+        </div>
       </div>
     </div>
     <br>
-    
-<!--container for about-->
-<div class="container">
-  <div class="row align-items-center">
-    <div class="col-9">
-      <a href="about.html" class="no-link-style"><h2 style="padding-bottom: 18px;">Serving Stage Realness!</h2>
-      </a>
-    </div>
-    <div class="col-3 text-end">
-      <a href="about.html" class="btn btn-dark outfit-medium" style="font-size: 2vw;">what about us</a>
+    </main>
+
+  
+  <div class="index-about-bg" style="background-color: #5f2a88; color: whitesmoke;">
+    <div class="row">
+      <div class="col-12">
+        <a href="about.html" class="no-link-style">
+          <h2 style="padding-bottom: 18px;">Serving Stage Realness!</h2>
+        </a>
+      </div>
+      <div class="col-4">
+        <p>
+          Welcome to your new favourite queer theatre world website! 
+          </p>
+          <img scr="images/girls-hugging.jpg" alt="girls hugging">
+          <p>Where drama is celebrated, stories are recognised and the LGBTQ+ community shines in the spotlight.
+        </p>
+      </div>
     </div>
   </div>
-  <div class="row">
-    <div class="col-8">
-      <p>
-        Are you in love with Queer theatre and always in for good LGBTQ+ representation?<strong>&nbsp;So are we! </strong> </p>
-      <p>Welcome to your new favourite queer theatre world website where drama is celebrated, stories are celebrated and the LGBTQ+ community shines in the spotlight.
-  We’re talking about a fabulous, inclusive space where you can dive into iconic interviews, bold conversations about representation with professionals and reviews about showstopping plays!
-    Whether you already love LGBTQ theatre or you are curious, our community is wide open and waiting for you! Because theatre is better when everyone gets a role. <strong>This show is just about to start!</strong> <a href="about.html" class="no-link-style icon-style">More...</a></p>
+  <!---second about colour-->
+  <div class="index-about-bg" style="background-color: #FDB92E; color: whitesmoke;">
+    <div class="row">
+      <div class="col-5">
+        <p>
+          <p>
+            We’re talking about a fabulous, inclusive space where you can dive into iconic interviews, bold conversations about representation with professionals and reviews about showstopping plays!
+              Whether you already love LGBTQ theatre or you are curious, our community is wide open and waiting for you! Because theatre is better when everyone gets a role. <strong>This show is just about to start!</strong> <a href="about.html" class="no-link-style icon-style">More...</a>
+        </p>
+      </div>
     </div>
   </div>
-</div>
-<br>
-	  
-  </main>
+   <!---last about colour-->
+   <div class="index-about-bg" style="background-color: #117F84; color: whitesmoke;">
+    <div class="row">
+      <div class="col-3">
+      </div>
+      <div class="col-6">
+          <p class="text-center">
+            Are you in love with Queer theatre and always in for good LGBTQ+ representation?<strong>&nbsp;So are we!
+            </strong>
+          </p>
+          <div class="text-center">
+            <a href="about.html" class="btn btn-light outfit-medium" style="font-size: 2vw; color:#117F84;">what about us</a>
+          </div>
+      </div>
+      <div class="col-3">
+      </div>
+    </div>
+  </div>
 
 <!---pop-up-->
   <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
