--- a/blog.html
+++ b/blog.html
@@ -179,7 +179,7 @@
     <div class="container">
       <div class="row align-items-center">
         <div class="col-8">
-          <a href="blog.html" class="no-link-style"><h3>blog</h3></a>
+          <a href="blog.html" class="no-link-style"><h3>The Spotlight Catalogue</h3></a>
         </div>
         <div class="col-4 text-end">
 		  <div class="dropdown">
